objects/tractionguest__Violation__c.object
<CustomObject>
    <description>Location violations, employee violations - work.com</description>
    <fields>
        <fullName>tractionguest__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where violation occurred</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractionguest__Violation_Date_Time__c</fullName>
        <description>When did the violation occur?</description>
        <label>Violation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tractionguest__Violation_Name__c</fullName>
        <label>Violation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Violation_Type__c</fullName>
        <label>Violation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location Capacity Violation</fullName>
                </value>
                <value>
                    <fullName>Employee Violation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Violation</label>
    <listViews>
        <fullName>tractionguest__All</fullName>
        <columns>tractionguest__Location__c</columns>
        <columns>NAME</columns>
        <columns>tractionguest__Violation_Date_Time__c</columns>
        <columns>tractionguest__Violation_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Violation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>